[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Game/HUD.gd" type="Script" id=4]
[ext_resource path="res://src/Game/PlayerSprite.gd" type="Script" id=5]
[ext_resource path="res://assets/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Game/Controls.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Game/Fade.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GameLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="PixilationVPC" type="ViewportContainer" parent="GameLayer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
stretch = true

[node name="PixilationVP" type="Viewport" parent="GameLayer/PixilationVPC"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Darkness" type="CanvasModulate" parent="GameLayer/PixilationVPC/PixilationVP"]
visible = false
light_mask = 2
color = Color( 0, 0, 0, 1 )

[node name="BG" type="ColorRect" parent="GameLayer/PixilationVPC/PixilationVP"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.462745, 0.282353, 0.282353, 1 )

[node name="Map" parent="GameLayer/PixilationVPC/PixilationVP" instance=ExtResource( 2 )]

[node name="Player" type="KinematicBody2D" parent="GameLayer/PixilationVPC/PixilationVP"]
collision_mask = 6
script = ExtResource( 3 )

[node name="Light" type="Light2D" parent="GameLayer/PixilationVPC/PixilationVP/Player"]
texture_scale = 10.0
mode = 2
range_layer_min = -2
range_layer_max = 2
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_buffer_size = 512
shadow_filter = 1
shadow_filter_smooth = 10.0

[node name="Collision" type="CollisionShape2D" parent="GameLayer/PixilationVPC/PixilationVP/Player"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="PlayerSprite" type="MeshInstance2D" parent="HUD"]
script = ExtResource( 5 )

[node name="GoalDistance" type="MeshInstance2D" parent="HUD"]

[node name="GoalLine" type="Line2D" parent="HUD"]
default_color = Color( 0, 0, 0, 1 )
texture_mode = 50

[node name="DebugLabel" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )

[node name="DifficultyLabel" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "[difficulty]"
align = 2

[node name="Controls" parent="HUD" instance=ExtResource( 7 )]
margin_left = 496.842
margin_top = 368.421
margin_right = 1026.84
margin_bottom = 598.421

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Fade" type="ColorRect" parent="FadeLayer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="FadeLayer/Fade"]
